fix horizontal scroll bar

--- a/TWLight/static/css/new-local.rtl.css
+++ b/TWLight/static/css/new-local.rtl.css
@@ -21,6 +21,10 @@ body {
   text-align: right;
 }
 
+.overflow-hidden{
+    overflow: hidden;
+}
+
 /* Different buffers for the footer based on screen size */
 @media (max-width: 767px) {
   body {
